Bug 1843238: Make List-group-item-text background transparent
Fixes list-group-item-text background from white to transparent.
An example of where this appears is in the "Latest changes I can view"
block. The page description had a white background, which did not look
good as there shouldn't have been a background.

behatnotneeded

--- a/htdocs/theme/raw/sass/components/_list-group.scss
+++ b/htdocs/theme/raw/sass/components/_list-group.scss
@@ -258,7 +258,7 @@
 
 .list-group-item-text {
     margin-top: 5px;
-    background-color: $white;
+    background-color: transparent;
     line-height: 1.3;
 }
 
